Fix layout on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,10 @@
 .container {
-  padding: 0 2rem;
+  padding: 0;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 4rem 0 8rem;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -129,6 +129,10 @@
   }
 }
 
+.main h1 {
+  margin-top: 0;
+}
+
 .input {
   margin: 0.5rem;
 }
@@ -196,6 +200,12 @@
   .outputText {
     background-color: #222222;
     border: 1px #555555 solid;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .outputText {
+    width: 320px;
   }
 }
 
